--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,10 +14,10 @@
     "clsx": "^2.1.1",
     "connectkit": "^1.9.1",
     "lucide-react": "^0.563.0",
-    "next": "16.1.6",
+    "next": "14.2.15",
     "radix-ui": "^1.4.3",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^3.4.0",
     "viem": "^2.45.1",
     "wagmi": "^3.4.2"
@@ -25,10 +25,10 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "eslint": "^9",
-    "eslint-config-next": "16.1.6",
+    "eslint-config-next": "14.2.15",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
